// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameOver renders correctly when the user loses 1`] = `
<DocumentFragment>
  <h1
    class="sc-f9cd8f8e-0 dcLxvF"
  >
    Game over.
  </h1>
  <h2
    class="sc-773df940-0 icsDSx"
  >
    Red won.
  </h2>
  <button
    class="sc-5e2d1029-0 NWVxU"
  >
    New Game
  </button>
</DocumentFragment>
`;

exports[`GameOver renders correctly when the user wins 1`] = `
<DocumentFragment>
  <h1
    class="sc-f9cd8f8e-0 dcLxvF"
  >
    Congratulations! 🎉
  </h1>
  <h2
    class="sc-773df940-0 icsDSx"
  >
    You won.
  </h2>
  <button
    class="sc-5e2d1029-0 NWVxU"
  >
    New Game
  </button>
</DocumentFragment>
`;
